syntax = "proto3";

option java_package = "smr.shop.libs.grpc.category";
option java_multiple_files = true;
import "object/CategoryId.proto";

message CategoryGrpcResponse {
  int64 id = 1;
  string slug = 2;
  string name = 3;
}

service CategoryService {
  rpc getCategoryById(CategoryGrpcId) returns (CategoryGrpcResponse);
}